--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
+body{
+    background-color: black;
+    color: white;
+}
+.button{
+    background-color: rgb(11, 130, 130);
+    color: white; 
+    margin-top: 0px;
+}
+.btn{
+    display: flex;
+    justify-content: center;
+   
+}
+button{
+    border-radius: 15px;
+}
+.joke{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    margin: 10px;
+    text-align: center;
+}
+.heading{
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  text-decoration: underline;
 }
